<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/dialog_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">


        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/transparent"
            android:hint="@string/title"
            android:maxLines="1"
            android:minHeight="56dp"
            android:singleLine="true"
            android:textColor="@color/canvasTextDark"
            android:inputType="textCapSentences"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/title"
            android:background="@color/dividerColor"/>


        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_above="@+id/optionsContainer"
            android:layout_margin="16dp"
            android:background="@color/transparent"
            android:gravity="top"
            android:hint="@string/message"
            android:textColor="@color/canvasTextDark"
            android:inputType="textCapSentences|textMultiLine|textImeMultiLine"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"/>


        <LinearLayout
            android:id="@+id/optionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/transparent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="12dp"
                android:background="@color/dividerColor"/>

            <CheckBox
                android:id="@+id/threadedCheckbox"
                style="@style/TextStyle.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/allowThreading" />

            <CheckBox
                android:id="@+id/publishCheckbox"
                style="@style/TextStyle.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/publish" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
