<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/dialog_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/activity_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/spinnerWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <Spinner
                    android:id="@+id/course_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center_vertical"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/dividerColor"
                    android:layout_below="@id/course_spinner"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/recipientWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:visibility="gone">

                <com.android.ex.chips.RecipientEditTextView
                    android:id="@+id/recipient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/users"
                    android:imeOptions="flagNoExtractUi"
                    android:minHeight="58dp"
                    android:textColor="@color/defaultPrimaryDark"
                    android:background="@color/transparent"
                    android:padding="8dp"
                    android:gravity="center_vertical"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/recipient"
                    android:background="@color/dividerColor"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/subjectWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <EditText
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subject"
                    android:maxLines="2"
                    android:minHeight="58dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:singleLine="false"
                    android:background="@color/transparent"
                    android:textColor="@color/defaultPrimaryDark"
                    android:gravity="center_vertical"
                    android:inputType="textCapSentences"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="top"
                    android:hint="@string/composeMessage"
                    android:minLines="10"
                    android:padding="8dp"
                    android:singleLine="false"
                    android:textColor="@color/defaultPrimaryDark"
                    android:inputType="textCapSentences|textMultiLine|textImeMultiLine"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>